--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
       </main>
     </div>
   </div>
-  <script src="/js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
+
